Fixed: Input field cut off due to font family (Apple font only where possible now).

--- a/src/app/components/pages/alpha/jobs-and-machines/jobs-and-machines.component.css
+++ b/src/app/components/pages/alpha/jobs-and-machines/jobs-and-machines.component.css
@@ -35,3 +35,7 @@ mat-expansion-panel-header {
   margin-right: 8px;
   margin-bottom: 8px;
 }
+
+.add-padding-left {
+  padding-left: 8px;
+}
