--- a/src/styles.css
+++ b/src/styles.css
@@ -64,7 +64,7 @@ mat-accordion mat-expansion-panel:last-child {
   margin-bottom: 16px;
 }
 
-mat-expansion-panel *:not(i):not(mat-icon), mat-expansion-panel-header *:not(i):not(mat-icon), mat-card *:not(i):not(mat-icon):not(input *) {
+mat-expansion-panel-header *, mat-expansion-panel *, mat-card-content, .title, .ord-text {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
